adding temp sensor config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
   "idf.toolsPathWin": "C:\\Users\\User\\.espressif",
   "idf.pythonInstallPath": "C:\\Users\\User\\.espressif\\tools\\idf-python\\3.11.2\\python.exe",
   "files.associations": {
-    "ledc.h": "c"
+    "ledc.h": "c",
+    "task.h": "c"
   },
   "idf.portWin": "COM3",
   "idf.openOcdConfigs": [
