--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "ledc_basic_example_main.c"
-                    PRIV_REQUIRES esp_driver_gpio
+                    PRIV_REQUIRES esp_driver_gpio esp_driver_tsens
                     INCLUDE_DIRS ".")
