--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
   },
   "idf.portWin": "COM3",
   "idf.openOcdConfigs": [
-    "board/esp32c3-builtin.cfg"
+    "board/esp32c3-ftdi.cfg"
   ],
   "idf.customExtraVars": {
     "IDF_TARGET": "esp32c3"
